fix some spacing and sizing on mobile view

--- a/src/app/components/meet-team/team.scss
+++ b/src/app/components/meet-team/team.scss
@@ -1,7 +1,7 @@
 @import "globals/zothacks-styles.scss";
 
 #organizer-photos{
-  padding: 50px;
+  padding: 10px 50px;
   
   .organizer-img-wrapper img {
     width: 190px;
